# cep-simulation

./: readme.md
cep-engine/: Dockerfile  cep_engine.py  cep_engine_v2.py
cep-engine-rust/: Cargo.toml  Dockerfile
cep-engine-rust-dsl/: Cargo.toml  Dockerfile  rules.yaml
cep-engine-rust-dsl/src/: aggregator.rs  comms_loss.rs  config.rs  dedup.rs  main.rs  rules.rs  suppression.rs  sustained.rs  types.rs  window.rs
cep-engine-rust/src/: main.rs  rules.rs  window.rs
dashboard-ui/: Dockerfile  app.py  requirements.txt
dashboard-ui/static/: index.html
edge-cep-demo/: Chart.yaml  values.yaml
edge-cep-demo/templates/: deployment-cep.yaml  deployment-llm_service.yaml  deployment-ollama.yaml
edge-cep-helm/: values.yaml
edge-cep-helm-arm64/: Chart.yaml  values.yaml
edge-cep-helm-arm64/edge-cep-helm-arm64_gpu/: Chart.yaml  values.yaml
edge-cep-helm-arm64/edge-cep-helm-arm64_gpu/templates/: _helpers.tpl  deployment-llm_service.yaml  deployment-simulator.yaml  pvc_ollama.yaml  secret.yaml  service-ollama.yaml
edge-cep-helm-arm64/templates/: configmap-mosquitto.yaml  deployment-llm_service.yaml
edge-cep-helm-arm64_gpu/: Chart.yaml  values.yaml
edge-cep-helm-arm64_gpu/templates/: deployment-ollama.yaml  pvc_chromedb.yaml
edge-cep-helm/templates/: configmap-mosquitto.yaml  deployment-cep.yaml  deployment-dashboard.yaml  deployment-mqtt.yaml  deployment-simulator.yaml  namespace.yaml  secret.yaml  service-dashboard.yaml  service-mqtt.yaml
llm_service/: Dockerfile  entrypoint.sh  llm_service.py  llm_service_v2.py  requirements.txt
simulator/: Dockerfile  simulator.py  simulator_v2.py  simulator_v3.py  simulator_v4.py
