[package]
name    = "cep-engine"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "cep-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1",    features = ["full"] }

# MQTT client (replaces paho-mqtt)
rumqttc      = "0.24"

# JSON serialisation / deserialisation
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"

# Timestamps
chrono       = { version = "0.4",  features = ["serde"] }

# UUIDs for incident IDs
uuid         = { version = "1",    features = ["v4"] }

# Concurrent hashmap — used by WindowBuffer and IncidentDedup
dashmap      = "6"

# YAML rule DSL
serde_yaml           = "0.9"

# Logging
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto       = true
strip     = true     # strip debug symbols → smaller binary
